--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "automation"
   ],
   "author": "Dane Petersen",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "node-hue-api": "^5.0.0-beta.7"
+  }
 }
