--- a/package.json
+++ b/package.json
@@ -19,5 +19,12 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "node-hue-api": "^5.0.0-beta.7"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.29.3",
+    "@typescript-eslint/parser": "^4.29.3",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.24.2"
   }
 }
