--- a/package.json
+++ b/package.json
@@ -1,30 +1,32 @@
 {
-  "name": "hue-app",
-  "version": "0.1.0",
-  "description": "Philips Hue Node.js app for controlling lights",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [
-    "philips",
-    "hue",
-    "nodejs",
-    "lights",
-    "home",
-    "automation"
-  ],
-  "author": "Dane Petersen",
-  "license": "MIT",
-  "dependencies": {
-    "dotenv": "^10.0.0",
-    "node-hue-api": "^5.0.0-beta.7"
-  },
-  "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.29.3",
-    "@typescript-eslint/parser": "^4.29.3",
-    "eslint": "^7.32.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-plugin-import": "^2.24.2"
-  }
+	"name": "hue-app",
+	"version": "0.1.0",
+	"description": "Philips Hue Node.js app for controlling lights",
+	"main": "index.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"keywords": [
+		"philips",
+		"hue",
+		"nodejs",
+		"lights",
+		"home",
+		"automation"
+	],
+	"author": "Dane Petersen",
+	"license": "MIT",
+	"dependencies": {
+		"@types/node-hue-api": "^2.3.2",
+		"dotenv": "^10.0.0",
+		"node-hue-api": "^5.0.0-beta.7"
+	},
+	"devDependencies": {
+		"@typescript-eslint/eslint-plugin": "^4.29.3",
+		"@typescript-eslint/parser": "^4.29.3",
+		"eslint": "^7.32.0",
+		"eslint-plugin-import": "^2.24.2",
+		"ts-node": "^10.2.1",
+		"typescript": "^4.3.5"
+	}
 }
